Fix size on mobile

--- a/src/site/_includes/css/tailwind.css
+++ b/src/site/_includes/css/tailwind.css
@@ -33,18 +33,18 @@
 }
 
 .depth-1 {
-  background-size: 50vw auto;
+  background-size: auto 100vw;
   animation-duration: 40s;
 }
 
 .depth-2 {
-  background-size: 25vw auto;
+  background-size: auto 50vw;
   animation-duration: 60s;
   top: -80px;
 }
 
 .depth-3 {
-  background-size: 12.5vw auto;
+  background-size: auto 25vw;
   animation-duration: 80s;
   top: -120px;
 }
@@ -123,6 +123,18 @@ a:focus {
   
   h3 {
     @apply text-3xl;
+  }
+
+  .depth-1 {
+    background-size: auto 50vw;
+  }
+  
+  .depth-2 {
+    background-size: auto 25vw;
+  }
+  
+  .depth-3 {
+    background-size: auto 12.5vw;
   }
   
 
